results/no_framework/openai/mbpp/test_scripts/MbppEval-472_5.out
Error running code: invalid non-printable character U+200B (<string>, line 4)
